
option java_outer_classname="TaskCancelResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message TaskCancelResponse{
}